--- a/about_us.html
+++ b/about_us.html
@@ -9,7 +9,7 @@
 <!--Header-->
 <header>
     <div class="menu_bar">
-        <h1 class="logo"><a href="Index.html">Full Service Flooring</a></h1>
+        <h1 class="logo"><a href="index.html">Full Service Flooring</a></h1>
         <ul>
             <li><a href="about_us.html">About Us</a>
                 <div class="drop">
