--- a/photos.html
+++ b/photos.html
@@ -4,97 +4,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Photo Gallery</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/global.css">
     <link rel="stylesheet" href="./css/photos.css">
+    <script src="https://kit.fontawesome.com/b6b0e117a3.js" crossorigin="anonymous"></script>
 
 
 
 <body>
-    <header>
-        <div class="menu_bar">
-            <h1 class="logo"><a href="index.html">Full Service Flooring</a></h1>
-            <ul>
-                <li><a href="about_us.html">About Us</a>
-                    <div class="drop">
-                        <ul>
-                            <li><a href="location.html">Location</a></li>
-                            <li><a href="./work_for_us.html">Work For Us</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li><a href="services.html">Services</a>
-                    <div class="drop">
-                        <ul><li><a href="testimonials.html">Testimonials</a></li>
-                            <li><a href="photos.html">Gallery</a></li>
-                            <li><a href="get_a_quote.html">Get a Quote</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li><a href="faqs.html">FAQ's</a></li>
-                <li><a href="contactUs.html">Contact Us</a></li>
-            </ul>
-        </div>
-    </header>
+<!--nav bar-->
+<header>
+    <div class="menu_bar">
+        <h1 class="logo"><a href="index.html"><i class = "fa-solid fa-home"></i><span class="disappear"> &nbsp; Full Service Flooring</span></a></h1>
+        <ul>
+            <li><a href="about_us.html"><i class = "fa-solid fa-file"></i><span class = "disappear"> &nbsp; About Us</span></a>
+                <div class="drop">
+                    <ul>
+                        <li><a href="location.html">Location</a></li>
+                        <li><a href="work_for_us.html">Work For Us</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="services.html"><i class = "fa-solid fa-gear"></i><span class = "disappear"> &nbsp; Services</span></a>
+                <div class="drop">
+                    <ul><li><a href="testimonials.html">Testimonials</a></li>
+                        <li><a href="photos.html">Gallery</a></li>
+                        <li><a href="get_a_quote.html">Get a Quote</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="faqs.html"><i class = "fa-solid fa-question"></i> &nbsp; <span class = "disappear"> &nbsp; FAQ's</span></a></li>
+            <li><a href="contact_us.html"><i class = "fa-solid fa-envelope"></i><span class = "disappear">&nbsp; Contact Us</span></a></li>
+        </ul>
+    </div>
+</header>
 
+<!--Content-->
+<h2 style="padding-top: 40px; margin-top: 1%;">Gallery</h2>
+<h3>Take A Look At Some Of Our Jobs</h3>
 <!--BATHROOM IMAGES-->
 <div><h2>Bathroom Remodels</h2></div>
-<div><h4>Our bathroom remodels can range from just adding a new shower, or a complete remodel with new cabinetry, <br>flooring, tile showers, and 
-    light fixtures. For an accurate estimate <a href=get_a_quote.html">click here to contact us for a quote!</a>
+<div class="textContainer"><h4>Our bathroom remodels can range from just adding a new shower, or a complete remodel with new cabinetry, flooring, tile showers, and 
+    light fixtures. For an accurate estimate <a href="get_a_quote.html">click here to contact us for a quote!</a>
 </h4></div>
-<div = class="photoContainer">
+<div class="image">
+<div class="photoContainer">
     <div class="photos">
-        <img src="images/after-bathroom1.JPG">
+        <img src="images/after-bathroom1.JPG" alt="After remodel of bathroom 1">
     </div>
     <div class="photos">
-        <img src="images/after-bathroom2.JPG">
+        <img src="images/after-bathroom2.JPG" alt="After remodel of bathroom 2">
     </div>
     <div class="photos">
-        <img src="images/after-bathroom3.JPG">
+        <img src="images/after-bathroom3.JPG" alt="After remodel of bathroom 3">
     </div>
     <div class="photos">
-        <img src="images/after-bathroom4.JPG">
+        <img src="images/after-bathroom4.JPG" alt="After remodel of bathroom 4">
     </div>
+</div>
 </div>
 
 
 <br>
 <!--KITCHEN IMAGES-->
 <div><h2>Kitchen Remodels</h2></div>
-<div><h4>We offer complete and partial kitchen remodels. We can completely gut, redesign, and remodel everything in your kitchen<br> including
-    cabinets, flooring, and light fixtures. Or if your space just needs a little "pick-me up" we can focus on specifically <br>one area you'd like redone!
-    <a href=get_a_quote.html">For a price estimate on our kitchen remodels, click here!</a>
+<div class="textContainer"><h4>We offer complete and partial kitchen remodels. We can completely gut, redesign, and remodel everything in your kitchen including
+    cabinets, flooring, and light fixtures. Or if your space just needs a little "pick-me up" we can focus on specifically one area you'd like redone!
+    <a href="get_a_quote.html">For a price estimate on our kitchen remodels, click here!</a>
 </h4></div>
-<div = class="oddContainer">
+<div class="image">
+<div class="oddContainer">
     <div class="photos">
-        <img src="images/after-kitchen1.jpg">
+        <img src="images/after-kitchen1.jpg" alt="After remodel of kitchen">
     </div>
     <div class="photos">
-        <img src="images/after-kitchen1.2.jpg">
+        <img src="images/after-kitchen1.2.jpg" alt="After remodel of kitchen">
     </div>
     <div class="photos">
-        <img src="images/after-kitchen1.3.jpg">
+        <img src="images/after-kitchen1.3.jpg" alt="After remodel of kitchen">
     </div>
+</div>
 </div>
 
 
 <!--FLOORING IMAGES-->
 <div><h2>Flooring Remodels</h2></div>
-<div><h4>Flooring is in our name! We offer carpet, tiling, hardwood, and luxury vinyl planking. We can install <br>flooring in anyroom in your home,
-    or RV! <a href=get_a_quote.html">For pricing information about our flooring services click here!</a>
+<div class="textContainer"><h4>Flooring is in our name! We offer carpet, tiling, hardwood, and luxury vinyl planking. We can install flooring in anyroom in your home,
+    or RV! <a href="get_a_quote.html">For pricing information about our flooring services click here!</a>
 </h4></div>
-<div = class="photoContainer">
+<div class="image">
+<div class="twoContainer">
     <div class="photos">
-        <!--EMPTY TO CENTER IMAGES-->
-    </div>
-    <div class="photos">
-        <img src="images/after-flooring1.jpg">
-    </div>
-    <div>
-        <img src="images/after-flooring2.jpg">
+        <img src="images/after-flooring1.jpg" alt="After remodel of flooring installation">
     </div>
     <div class="photos">
-        <!--EMPTY TO CENTER IMAGES-->
+        <img src="images/after-flooring2.jpg" alt="After remodel of flooring installation"> 
     </div>
+</div>
 </div>
 
 
@@ -102,13 +108,13 @@
 <br>
     <div class="footer">
             <div class="footer-items">
-                <p style="color: #543913;"><a href="https://www.facebook.com/profile.php?id=100086395910352">Facebook</a></p>
+                <p style="color: #543913;"><a href="https://www.facebook.com/profile.php?id=100086395910352" target="_blank">Facebook</a></p>
             </div>
             <div class="footer-items">
                 <p style="color: #543913;"><a href="mailto:fullserviceflooringwi25@gmail.com">Send Us an Email</a></p>
             </div>
             <div class="footer-items">
-                <img src="./images/dark_logo.png" style="width: 100px;">
+                <img src="./images/dark_logo.png" style="width: 100px;" alt="Full Service Flooring Logo">
             </div>
             <div>
                 <p style="color: #543913;">Call us: (715) 409-0073</p>
