--- a/services.html
+++ b/services.html
@@ -1,29 +1,32 @@
-<!--I didnt want to change the real Index or global css, but if you guys like the changes I made then we can implement them. 
-I didnt want to delet/work over someone else's code.-->
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Services</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/services.css">
-    <title>Services</title>
+    <script src="https://kit.fontawesome.com/b6b0e117a3.js" crossorigin="anonymous"></script>
+    
 </head>
 <body>
+    <!--nav bar-->
     <header>
         <div class="menu_bar">
-            <h1 class="logo"><a href="index.html">Full Service Flooring</a></h1>
+            <h1 class="logo"><a href="index.html"><i class = "fa-solid fa-home"></i><span class="disappear"> &nbsp; Full Service Flooring</span></a></h1>
             <ul>
-                <li><a href="about_us.html">About Us</a>
+                <li><a href="about_us.html"><i class = "fa-solid fa-file"></i><span class = "disappear"> &nbsp; About Us</span></a>
                     <div class="drop">
                         <ul>
                             <li><a href="location.html">Location</a></li>
-                            <li><a href="./work_for_us.html">Work For Us</a></li>
+                            <li><a href="work_for_us.html">Work For Us</a></li>
                         </ul>
                     </div>
                 </li>
-                <li><a href="services.html">Services</a>
+                <li><a href="services.html"><i class = "fa-solid fa-gear"></i><span class = "disappear"> &nbsp; Services</span></a>
                     <div class="drop">
                         <ul><li><a href="testimonials.html">Testimonials</a></li>
                             <li><a href="photos.html">Gallery</a></li>
@@ -31,8 +34,8 @@ I didnt want to delet/work over someone else's code.-->
                         </ul>
                     </div>
                 </li>
-                <li><a href="faqs.html">FAQ's</a></li>
-                <li><a href="contact_us.html">Contact Us</a></li>
+                <li><a href="faqs.html"><i class = "fa-solid fa-question"></i> &nbsp; <span class = "disappear"> &nbsp; FAQ's</span></a></li>
+                <li><a href="contact_us.html"><i class = "fa-solid fa-envelope"></i><span class = "disappear">&nbsp; Contact Us</span></a></li>
             </ul>
         </div>
     </header>
@@ -41,9 +44,12 @@ I didnt want to delet/work over someone else's code.-->
 <!--CONTENT-->
 
 <!--SERVICES-->
+<section>
+    <h2>Services Offered</h2>
+    <h3 style="text-align:center;">What We Have To Offer Our Clients</h3>
+    <br>
+    <br>
 
-<section class="services" id="white">
-    <h2 class="heading">Services Offered</h2>
     <div class="services-container">
         <div class="services-box">
             <div class="flip-card">
@@ -118,14 +124,16 @@ I didnt want to delet/work over someone else's code.-->
 
 <!--I'm thinking about doing a button that is a link and takes you to the get qutoe page, however that might make the page feel empty....-->
 <!-- Section: GET QUOTE LINK -->
-<section class="quote-link" id="white">
-    <h2 class="heading">Pricing</h2>
+<section>
+    <h2>Pricing</h2>
+    <br>
+    <br>
     <p style="text-align:center;">Our pricing structure is thoughtfully designed to accommodate the specific requirements of each project and the unique needs of our clients.
          We prioritize customization and strive to deliver the best value based on the individual circumstances surrounding each engagement. 
         While we recognize that every project is distinct, we do provide a basic pricing guide to serve as a reference point. This guide outlines 
         our typical pricing tiers and the general factors that influence costs, such as project complexity, scope, and required resources. </p>   
     <div class="quote-container">
-        <a href="get_a_quote.html">
+        <a href="get_a_quote.php">
             <div class="quote-box">
                 <p>Get A Quote</p>
             </div>
@@ -140,13 +148,13 @@ I didnt want to delet/work over someone else's code.-->
  <br>
  <div class="footer">
      <div class="footer-items">
-         <p style="color: #543913;"><a href="https://www.facebook.com/profile.php?id=100086395910352">Facebook</a></p>
-     </div>
+        <p style="color: #543913;"><a href="https://www.facebook.com/profile.php?id=100086395910352" target="_blank">Facebook</a></p>
+    </div>
      <div class="footer-items">
          <p style="color: #543913;"><a href="mailto:fullserviceflooringwi25@gmail.com">Send Us an Email</a></p>
      </div>
      <div class="footer-items">
-         <img src="./images/dark_logo.png" style="width: 100px;">
+         <img src="./images/dark_logo.png" style="width: 100px;" alt="Dark Logo for Full Service Flooring">
      </div>
      <div>
          <p style="color: #543913;">Call us: (715) 409-0073</p>
