--- a/contact_us.html
+++ b/contact_us.html
@@ -14,7 +14,7 @@
 <!--nav bar-->
 <header>
     <div class="menu_bar">
-        <h1 class="logo"><a href="index.html"><i class = "fa-solid fa-home"></i><span class="disappear"> &nbsp; Full Service Flooring</span></a></h1>
+        <h1 class="logo"><a href="./docs/index.html"><i class = "fa-solid fa-home"></i><span class="disappear"> &nbsp; Full Service Flooring</span></a></h1>
         <ul>
             <li><a href="about_us.html"><i class = "fa-solid fa-file"></i><span class = "disappear"> &nbsp; About Us</span></a>
                 <div class="drop">
