--- a/work_for_us.html
+++ b/work_for_us.html
@@ -16,7 +16,7 @@
    <!--nav bar-->
    <header>
     <div class="menu_bar">
-        <h1 class="logo"><a href="index.html"><i class = "fa-solid fa-home"></i><span class="disappear"> &nbsp; Full Service Flooring</span></a></h1>
+        <h1 class="logo"><a href="./docs/index.html"><i class = "fa-solid fa-home"></i><span class="disappear"> &nbsp; Full Service Flooring</span></a></h1>
         <ul>
             <li><a href="about_us.html"><i class = "fa-solid fa-file"></i><span class = "disappear"> &nbsp; About Us</span></a>
                 <div class="drop">
@@ -43,16 +43,16 @@
 <!--CONTENT-->
 <section style="padding-top: 40px;">
     <h2>Join Our Team</h2>
-    <h3 style="text-align:center;">Interested In This Line Of Work?</h3>
+    <h3 style="text-align:center;">Interested In This Line Of Work?</h3> <br><br>
     <div id = "photos">
-        <img src = "./images/finished_bathroom.jpg" alt = "An image of a finished bathroom.">
-        <img src = "./images/finished_bathroom1.jpg" alt = "An image of a finished backsplash.">
-        <img src = "./images/finished_stairs.jpg" alt = "An image of some finished stairs.">
+        <img src = "./images/after-bathroom3.jpg" alt = "An image of a finished bathroom.">
+        <img src = "./images/after-bathroom5.jpg" alt = "An image of a finished backsplash.">
+        <img src = "./images/after-flooring1.jpg" alt = "An image of some finished stairs.">
     </div>
     <br>
-    <p style="text-align: center;">Are you looking for a hands-on career where you can make a real impact? Full Service Flooring, a leading flooring company, is seeking enthusiastic and hardworking individuals to join our growing team!</p>
 </section>
 
+<br> <br>
 <div id = "lists">
     <section>
         <h2>Why Work For Us</h2>
@@ -77,6 +77,7 @@
             </ul>
     </section>
 </div>
+<br><br>
 
 <section>
     <h2>Apply Today!</h2>
@@ -87,7 +88,7 @@
     </p>
 
     <div>
-        <form action = "./submit_email.php" method = "post" enctype="multipart/form-data">
+        <form action = "mailto:fullserviceflooringwi25@gmail.com" method = "post" enctype="multipart/form-data">
             <label>Name</label>
             <input type="text" id="name" name="name" placeholder="Your name" required>
             
