--- a/location.html
+++ b/location.html
@@ -16,26 +16,26 @@
 <!--nav bar-->
 <header>
     <div class="menu_bar">
-        <h1 class="logo"><a href="./docs/index.html"><i class = "fa-solid fa-home"></i><span class="disappear"> &nbsp; Full Service Flooring</span></a></h1>
+        <h1 class="logo"><a href="../docs/index.html"><i class = "fa-solid fa-home"></i><span class="disappear"> &nbsp; Full Service Flooring</span></a></h1>
         <ul>
-            <li><a href="about_us.html"><i class = "fa-solid fa-file"></i><span class = "disappear"> &nbsp; About Us</span></a>
+            <li><a href="../about_us.html"><i class = "fa-solid fa-file"></i><span class = "disappear"> &nbsp; About Us</span></a>
                 <div class="drop">
                     <ul>
-                        <li><a href="location.html">Location</a></li>
-                        <li><a href="work_for_us.html">Work For Us</a></li>
+                        <li><a href="../location.html">Location</a></li>
+                        <li><a href="../work_for_us.html">Work For Us</a></li>
                     </ul>
                 </div>
             </li>
-            <li><a href="services.html"><i class = "fa-solid fa-gear"></i><span class = "disappear"> &nbsp; Services</span></a>
+            <li><a href="../services.html"><i class = "fa-solid fa-gear"></i><span class = "disappear"> &nbsp; Services</span></a>
                 <div class="drop">
-                    <ul><li><a href="testimonials.html">Testimonials</a></li>
-                        <li><a href="photos.html">Gallery</a></li>
-                        <li><a href="get_a_quote.html">Get a Quote</a></li>
+                    <ul><li><a href="../testimonials.html">Testimonials</a></li>
+                        <li><a href="../photos.html">Gallery</a></li>
+                        <li><a href="../get_a_quote.html">Get a Quote</a></li>
                     </ul>
                 </div>
             </li>
-            <li><a href="faqs.html"><i class = "fa-solid fa-question"></i> &nbsp; <span class = "disappear"> &nbsp; FAQ's</span></a></li>
-            <li><a href="contact_us.html"><i class = "fa-solid fa-envelope"></i><span class = "disappear">&nbsp; Contact Us</span></a></li>
+            <li><a href="../faqs.html"><i class = "fa-solid fa-question"></i> &nbsp; <span class = "disappear"> &nbsp; FAQ's</span></a></li>
+            <li><a href="../contact_us.html"><i class = "fa-solid fa-envelope"></i><span class = "disappear">&nbsp; Contact Us</span></a></li>
         </ul>
     </div>
 </header>
